--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
 	<artifactId>asm-defuse</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>asm-defuse</name>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
@@ -45,6 +48,11 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>2.1.0</version>
 			</plugin>
 		</plugins>
 	</build>
