--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,46 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.ooboo</groupId>
 	<artifactId>asm-defuse</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>asm-defuse</name>
+	<url>https://github.com/andrioli/asm-defuse</url>
+	<description>asm powered by definitions/uses analysis</description>
+	<inceptionYear>2014</inceptionYear>
+
+	<scm>
+		<url>https://github.com/andrioli/asm-defuse</url>
+		<connection>scm:git:https://github.com/andrioli/asm-defuse.git</connection>
+		<developerConnection>scm:git:git@github.com:andrioli/asm-defuse.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+
+	<distributionManagement>
+		<repository>
+			<id>internal.repo</id>
+			<name>Temporary Staging Repository</name>
+			<url>file://${project.build.directory}/mvn-repo</url>
+		</repository>
+	</distributionManagement>
+
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/andrioli/asm-defuse</url>
+	</issueManagement>
+
+	<developers>
+		<developer>
+			<email>roberto.andrioli@gmail.com</email>
+			<name>Roberto Araujo</name>
+			<url>https://github.com/andrioli</url>
+			<id>andrioli</id>
+		</developer>
+	</developers>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -21,6 +54,11 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.16</version>
 				<configuration>
@@ -30,9 +68,31 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>com.mycila</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<header>BSD-NOTICE-TEMPLATE.txt</header>
+					<properties>
+						<owner>Roberto Araujo</owner>
+						<email>roberto.andrioli@gmail.com</email>
+					</properties>
+					<excludes>
+						<exclude>pom.xml</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.6.3.201306030806</version>
+				<version>0.6.5.201403032054</version>
 				<executions>
 					<execution>
 						<id>prepare-agent</id>
@@ -56,6 +116,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
@@ -75,4 +136,5 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 </project>
