--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,33 @@
 
 	<profiles>
 		<profile>
+			<id>pitest</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.pitest</groupId>
+						<artifactId>pitest-maven</artifactId>
+						<version>1.1.9</version>
+						<executions>
+							<execution>
+								<id>pitest</id>
+								<phase>test</phase>
+								<goals>
+									<goal>mutationCoverage</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<threads>2</threads>
+							<timestampedReports>false</timestampedReports>
+							<mutationThreshold>70</mutationThreshold>
+							<coverageThreshold>80</coverageThreshold>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>release</id>
 			<build>
 				<plugins>
