--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
 					</properties>
 					<excludes>
 						<exclude>pom.xml</exclude>
+						<exclude>.appveyor.yml</exclude>
 					</excludes>
 				</configuration>
 				<executions>
