--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,29 @@ language: java
 
 sudo: false
 
-jdk:
-  - oraclejdk8
-  - oraclejdk7
-  - openjdk7
-  - openjdk6
+addons:
+  apt:
+    packages:
+      - oracle-java9-installer
+
+env:
+  - JDK=oraclejdk9 MAVEN_SKIP_RC=true
+  - JDK=oraclejdk8
+  - JDK=oraclejdk7
+  - JDK=openjdk7
+  - JDK=openjdk6
+
+before_install:
+  - remove_dir_from_path $JAVA_HOME/bin
+  - export JAVA_HOME=/usr/lib/jvm/java-9-oracle
+  - export PATH=$JAVA_HOME/bin:$PATH
 
 install: true
+
+before_script:
+  - if [[ "$JDK" != "oraclejdk9" ]]; then jdk_switcher use $JDK; fi
+  - java -Xmx32m -version
+  - javac -J-Xmx32m -version
 
 script: mvn verify -Ppitest
 
