--- a/pom.xml
+++ b/pom.xml
@@ -261,8 +261,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
-			<artifactId>asm-debug-all</artifactId>
-			<version>5.2</version>
+			<artifactId>asm-analysis</artifactId>
+			<version>6.0</version>
 		</dependency>
 		<dependency>
 			<groupId>br.usp.each.saeg</groupId>
