Running travis with Java 6

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,22 @@ language: java
 
 sudo: false
 
+addons:
+  apt:
+    packages:
+      - openjdk-6-jdk
+
 jdk:
   - oraclejdk9
   - oraclejdk8
   - openjdk7
+  - openjdk6
+
+before_script:
+  - if [[ "$JDK" != "openjdk6" ]]; then wget https://archive.apache.org/dist/maven/maven-3/3.2.5/binaries/apache-maven-3.2.5-bin.zip; fi
+  - if [[ "$JDK" != "openjdk6" ]]; then unzip -qq apache-maven-3.2.5-bin.zip -d ../; fi
+  - if [[ "$JDK" != "openjdk6" ]]; then export M2_HOME=$PWD/../apache-maven-3.2.5; fi
+  - if [[ "$JDK" != "openjdk6" ]]; then export PATH=$M2_HOME/bin:$PATH; fi
 
 install: true
 
