--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,14 @@ jobs:
   build:
     strategy:
       fail-fast: false
+      matrix:
+        java: [8, 9]
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
       with:
-        java-version: 8
+        java-version: ${{ matrix.java }}
     - name: Java version
       run: java -version && javac -version
     - name: Build
