--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [8, 9, 10]
+        java: [7, 8, 9, 10]
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
