Fix: Could not transfer artifact * from/to central with Java 6
Received fatal alert: protocol_version

See: 4e3b1bfa156891e8c712b8ef9977e71827ae97bb

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Java version
       run: java -version && javac -version
     - name: Build
-      run: ./mvnw verify -Ppitest
+      run: ./mvnw verify -Ppitest -s .mvn/settings.xml
