--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
 	</issueManagement>
 
 	<ciManagement>
-		<system>Travis CI</system>
-		<url>https://travis-ci.org/saeg/asm-defuse</url>
+		<system>GitHub Actions</system>
+		<url>https://github.com/saeg/asm-defuse/actions</url>
 	</ciManagement>
 
 	<developers>
