--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04, windows-2019]
+        os: [ubuntu-18.04, macOS-10.15, windows-2019]
         java: [6, 7, 8, 9, 10]
     runs-on: ${{ matrix.os }}
     steps:
