--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Java version
       run: java -version && javac -version
     - name: Build
-      run: ./mvnw verify -Ppitest -s .mvn/settings.xml
+      run: ./mvnw verify -Ppitest
