--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>6</maven.compiler.source>
+		<maven.compiler.target>6</maven.compiler.target>
 	</properties>
 
 	<build>
@@ -69,10 +71,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -185,6 +183,17 @@
 	</build>
 
 	<profiles>
+		<!-- http://openjdk.java.net/jeps/182 -->
+		<profile>
+			<id>jdk12</id>
+			<activation>
+				<jdk>[12,)</jdk>
+			</activation>
+			<properties>
+				<maven.compiler.source>7</maven.compiler.source>
+				<maven.compiler.target>7</maven.compiler.target>
+			</properties>
+		</profile>
 		<profile>
 			<id>pitest</id>
 			<build>
