Fix pitest issues with Java 16
Run Maven and JVM child process created by pitest with option `--illegal-access=permit`

Since Java 16 `--illegal-access` default value is 'deny'

See: https://docs.oracle.com/en/java/javase/16/docs/specs/man/java.html
See: https://openjdk.java.net/jeps/396

Warn: `--illegal-access` is deprecated and might be removed in a future JDK release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,6 @@ jobs:
       run: java -version && javac -version
     - name: Build
       run: ./mvnw verify -Ppitest
+      env:
+        MAVEN_OPTS: "${{ matrix.java == 16 && '--illegal-access=permit' || '' }}"
+        # This is required only to run PIT Mutation Testing 1.2.5 with Java > 16
