--- a/pom.xml
+++ b/pom.xml
@@ -203,11 +203,21 @@
 		<profile>
 			<id>jdk12</id>
 			<activation>
-				<jdk>[12,)</jdk>
+				<jdk>[12,20)</jdk>
 			</activation>
 			<properties>
 				<maven.compiler.source>7</maven.compiler.source>
 				<maven.compiler.target>7</maven.compiler.target>
+			</properties>
+		</profile>
+		<profile>
+			<id>jdk20</id>
+			<activation>
+				<jdk>[20,)</jdk>
+			</activation>
+			<properties>
+				<maven.compiler.source>8</maven.compiler.source>
+				<maven.compiler.target>8</maven.compiler.target>
 			</properties>
 		</profile>
 		<profile>
